# ted

./: LICENSE.txt  renovate.json
.github/workflows/: build.yml
crates/ted/: Cargo.toml
crates/ted/src/: main.rs
