[package]
name = "ted-editor"
version = "0.1.0"
edition = "2021"
description = "A Rust port of tsoding's dramatic editor"

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
rev = "49f63ed2cfdf7ddca724ce95f2ef5758fc14d01e"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_core_pipeline",
    "bevy_state",
    "bevy_render",
    "bevy_pbr",
    "bevy_ui",
    "bevy_text",
    "tonemapping_luts",
    "bevy_winit",
    "wayland",
]
